k8s/production/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: rishat-space-production
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: rishat-space
    prometheus.io/scrape: 'true'
    prometheus.io/port: '2112'
  name: rishat-space
  namespace: rishat-space-production
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: rishat-space
  strategy: {}
  template:
    metadata:
      labels:
        io.kompose.service: rishat-space
    spec:
      containers:
        - ports:
            - containerPort: 80
          image: skeletondocker/rishat.space:latest
          #image: skeletondocker/rishat.space:latest_arm64 if ARM Arch needed
          name: rishat-space
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  name: rishat-space-production-service
  namespace: rishat-space-production
spec:
  selector:
    app: rishat-space
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
